<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:stretchColumns="1"
    tools:context="com.jasrsir.logintable.MainActivityLogin">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:text="@string/txvUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/edUser"
            android:ems="10"
            android:id="@+id/edUser" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:text="@string/txvContrasenia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edPass" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/edPassword"
            android:ems="10"
            android:id="@+id/edtPass" />

    </TableRow>
    <View android:background="@color/colorPrimary"
        android:layout_height="2dp"
        android:layout_width="match_parent"
        android:id="@+id/view1"/>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <CheckBox
            android:text="@string/chbRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            android:layout_column="1"
            android:layout_gravity="right"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#82ecc0"
            android:layout_span="2">

            <Button
                android:text="@string/btnAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnOk" />

            <Button
                android:text="@string/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnCancel"/>
        </LinearLayout>
    </TableRow>
</TableLayout>
